--- a/web/src/pages/CreatePoint/styles.css
+++ b/web/src/pages/CreatePoint/styles.css
@@ -1,6 +1,6 @@
 #page-create-point {
     width: 100%;
-    max-width: 1100px;
+    max-width: 1000px;
   
     margin: 0 auto;
   }
@@ -11,11 +11,14 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    text-align: center;
   }
   
   #page-create-point header a {
     color: var(--title-color);
     font-weight: bold;
+    font-size: 22px;
+    margin-right: 20px;
     text-decoration: none;
   
     display: flex;
@@ -23,7 +26,7 @@
   }
   
   #page-create-point header a svg {
-    margin-right: 16px;
+    margin-right: 5px;
     color: var(--primary-color);
   }
   
@@ -40,6 +43,7 @@
   
   #page-create-point form h1 {
     font-size: 36px;
+    
   }
   
   #page-create-point form fieldset {
@@ -58,6 +62,7 @@
   
   #page-create-point form legend h2 {
     font-size: 24px;
+    
   }
   
   #page-create-point form legend span {
