--- a/web/src/pages/Home/styles.css
+++ b/web/src/pages/Home/styles.css
@@ -1,7 +1,7 @@
 #page-home {
     height: 100vh;
   
-    background: url('../../assets/home-background.svg') no-repeat 700px bottom;
+    background: url('../../assets/home-background.svg') no-repeat 750px bottom;
   }
   
   #page-home .content {
@@ -16,8 +16,9 @@
     align-items: flex-start;
   }
   
-  #page-home .content header {
+  #page-home .content header img{
     margin: 48px 0 0;
+     
   }
   
   #page-home .content main {
